--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "@heroicons/react": "^2.2.0",
     "@tailwindcss/vite": "^4.1.16",
     "axios": "^1.12.2",
+    "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.548.0",
     "react": "^19.1.1",
