--- a/server/package.json
+++ b/server/package.json
@@ -11,15 +11,20 @@
   "description": "",
   "dependencies": {
     "@prisma/client": "^6.18.0",
+    "archiver": "^7.0.1",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
+    "bullmq": "^5.62.0",
     "cors": "^2.8.5",
     "csv-parser": "^3.2.0",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "express-validator": "^7.3.0",
+    "ioredis": "^5.8.2",
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.2",
-    "nodemailer": "^7.0.10"
+    "nodemailer": "^7.0.10",
+    "sharp": "^0.34.4"
   },
   "devDependencies": {
     "nodemon": "^3.1.10",
