--- a/server/package.json
+++ b/server/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "generate-encryption-key": "node scripts/generate-encryption-key.js"
   },
   "keywords": [],
   "author": "",
@@ -24,6 +25,7 @@
     "ioredis": "^5.8.2",
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.2",
+    "mustache": "^4.2.0",
     "nodemailer": "^7.0.10",
     "sharp": "^0.34.4"
   },
