--- a/client/package.json
+++ b/client/package.json
@@ -19,12 +19,15 @@
     "date-fns": "^4.1.0",
     "dompurify": "^3.3.0",
     "lucide-react": "^0.548.0",
+    "papaparse": "^5.5.3",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.9.4",
-    "tailwindcss": "^4.1.16"
+    "recharts": "^3.3.0",
+    "tailwindcss": "^4.1.16",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
