--- a/server/package.json
+++ b/server/package.json
@@ -30,7 +30,8 @@
     "mustache": "^4.2.0",
     "nodemailer": "^7.0.10",
     "sharp": "^0.34.4",
-    "spamc": "^0.0.5"
+    "spamc": "^0.0.5",
+    "stripe": "^18.5.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.10",
